--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -3,11 +3,11 @@
     android:shape="oval"
     >
     <gradient
-        android:startColor="#3F51B5"
-        android:endColor="#673AB7"
+        android:startColor="#0E122B"
+        android:endColor="#1E40BC"
         android:angle="0"
         />
-    <stroke android:color="@color/black" android:width="1dp"
+    <stroke android:color="@color/black" android:width="0.5dp"
         />
     <size android:width="60dp" android:height="60dp"
         />
