--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,22 @@
     tools:context=".MainActivity">
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="8dp"
         android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/txtResultat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="right|center_vertical"
             android:text="@string/mostraResultat"
             android:textAlignment="textEnd"
             android:textSize="70sp" />
@@ -26,10 +32,12 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="300dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="8dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -67,17 +75,22 @@
             android:layout_weight="1"
             android:background="@drawable/custom_button"
             android:text="@string/esborrar"
-            android:onClick="esborrar"
             app:backgroundTint="@null" />
     </LinearLayout>
 
     <TableLayout
+        android:id="@+id/tableLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="331dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout3">
 
         <TableRow
             android:layout_width="match_parent"
@@ -90,7 +103,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/custom_button"
                 android:text="@string/netejar"
-                android:onClick="netejar"
                 app:backgroundTint="@null" />
 
             <Button
@@ -118,7 +130,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/custom_button"
                 android:text="@string/dividir"
-                android:onClick="dividir"
                 app:backgroundTint="@null" />
         </TableRow>
 
@@ -133,7 +144,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/custom_button"
                 android:text="@string/set"
-                android:onClick="inserirSet"
                 app:backgroundTint="@null" />
 
             <Button
@@ -143,7 +153,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/custom_button"
                 android:text="@string/vuit"
-                android:onClick="inserirVuit"
                 app:backgroundTint="@null" />
 
             <Button
@@ -153,7 +162,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/custom_button"
                 android:text="@string/nou"
-                android:onClick="inserirNou"
                 app:backgroundTint="@null" />
 
             <Button
@@ -163,7 +171,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/custom_button"
                 android:text="@string/multiplicar"
-                android:onClick="multiplicar"
                 app:backgroundTint="@null" />
         </TableRow>
 
@@ -178,7 +185,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/custom_button"
                 android:text="@string/quatre"
-                android:onClick="inserirQuatre"
                 app:backgroundTint="@null" />
 
             <Button
@@ -188,7 +194,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/custom_button"
                 android:text="@string/cinc"
-                android:onClick="inserirCinc"
                 app:backgroundTint="@null" />
 
             <Button
@@ -198,7 +203,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/custom_button"
                 android:text="@string/sis"
-                android:onClick="inserirSis"
                 app:backgroundTint="@null" />
 
             <Button
@@ -208,7 +212,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/custom_button"
                 android:text="@string/restar"
-                android:onClick="restar"
                 app:backgroundTint="@null" />
         </TableRow>
 
@@ -223,7 +226,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/custom_button"
                 android:text="@string/u"
-                android:onClick="inserirU"
                 app:backgroundTint="@null" />
 
             <Button
@@ -233,7 +235,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/custom_button"
                 android:text="@string/dos"
-                android:onClick="inserirDos"
                 app:backgroundTint="@null" />
 
             <Button
@@ -243,7 +244,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/custom_button"
                 android:text="@string/tres"
-                android:onClick="inserirTres"
                 app:backgroundTint="@null" />
 
             <Button
@@ -253,7 +253,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/custom_button"
                 android:text="@string/sumar"
-                android:onClick="sumar"
                 app:backgroundTint="@null" />
         </TableRow>
 
@@ -276,7 +275,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/custom_button"
-                android:onClick="inserirZero"
                 android:text="@string/zero"
                 app:backgroundTint="@null" />
 
@@ -296,7 +294,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/custom_button"
                 android:text="@string/resultat"
-                android:onClick="resultat"
                 app:backgroundTint="@null" />
         </TableRow>
     </TableLayout>
